test/e2e/chainsaw/hybridgateway/httproute-multiple-parentrefs/01-httpRoute-multiple-parentrefs.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ($http_route_name)
  namespace: ($http_route_namespace)
  labels:
    chainsaw/test: ($test_name)
spec:
  parentRefs:
  - name: ($gateway_name_1)
    namespace: ($gateway_namespace_1)
  - name: ($gateway_name_2)
    namespace: ($gateway_namespace_2)
  hostnames:
  - ($fqdn_1)
  - ($fqdn_2)
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: ($route_path)
    backendRefs:
    - name: (join('-', [($test_name), 'httpbin']))
      port: 80
