test/e2e/chainsaw/hybridgateway/httproute-multiple-parentrefs/03-httproute-multiple-parentrefs.yaml
---
# HTTPRoute updated to reference multiple Gateways (both Gateway 1 and Gateway 2)
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: ($httproute_name)
  namespace: ($kong_namespace)
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ($gateway_name_1)
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ($gateway_name_2)
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /get
      backendRefs:
        - name: httpbin
          port: 80
