test/e2e/chainsaw/hybridgateway/httproute-multiple-parentrefs/03-httpRoute-single-parentref.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ($http_route_single_name)
  namespace: ($http_route_single_namespace)
  labels:
    chainsaw/test: ($test_name)
  annotations:
    konghq.com/strip-path: "true"
spec:
  parentRefs:
  - name: ($gateway_name_1)
    namespace: ($gateway_namespace_1)
  hostnames:
  - ($fqdn_1)
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: ($route_path_single)
    backendRefs:
    - name: (join('-', [($test_name), 'httpbin']))
      port: 80
