test/e2e/chainsaw/hybridgateway/httproute-multiple-parentrefs/02-assert-kong-resources-gateway1.yaml
---
# Assert KongRoute exists for Gateway 1
apiVersion: configuration.konghq.com/v1alpha1
kind: KongRoute
metadata:
  namespace: ($kong_namespace)
  (labels."gateway-operator.konghq.com/hybrid-gateways-name" == ($gateway_name_1)): true
  (labels."gateway-operator.konghq.com/hybrid-gateways-namespace" == ($kong_namespace)): true
  (labels."gateway-operator.konghq.com/managed-by" == 'HTTPRoute'): true
status:
  (conditions[?type == 'Programmed']):
    - status: 'True'
      reason: Programmed
  (konnect.controlPlaneID != null): true
  (konnect.id != null): true
---
# Assert KongService exists for Gateway 1
apiVersion: configuration.konghq.com/v1alpha1
kind: KongService
metadata:
  namespace: ($kong_namespace)
  (labels."gateway-operator.konghq.com/hybrid-gateways-name" == ($gateway_name_1)): true
  (labels."gateway-operator.konghq.com/hybrid-gateways-namespace" == ($kong_namespace)): true
  (labels."gateway-operator.konghq.com/managed-by" == 'HTTPRoute'): true
status:
  (conditions[?type == 'Programmed']):
    - status: 'True'
      reason: Programmed
  (konnect.controlPlaneID != null): true
  (konnect.id != null): true
---
# Assert KongUpstream exists for Gateway 1
apiVersion: configuration.konghq.com/v1alpha1
kind: KongUpstream
metadata:
  namespace: ($kong_namespace)
  (labels."gateway-operator.konghq.com/hybrid-gateways-name" == ($gateway_name_1)): true
  (labels."gateway-operator.konghq.com/hybrid-gateways-namespace" == ($kong_namespace)): true
  (labels."gateway-operator.konghq.com/managed-by" == 'HTTPRoute'): true
status:
  (conditions[?type == 'Programmed']):
    - status: 'True'
      reason: Programmed
  (konnect.controlPlaneID != null): true
  (konnect.id != null): true
---
# Assert KongTarget exists for Gateway 1
apiVersion: configuration.konghq.com/v1alpha1
kind: KongTarget
metadata:
  namespace: ($kong_namespace)
  (labels."gateway-operator.konghq.com/hybrid-gateways-name" == ($gateway_name_1)): true
  (labels."gateway-operator.konghq.com/hybrid-gateways-namespace" == ($kong_namespace)): true
  (labels."gateway-operator.konghq.com/managed-by" == 'HTTPRoute'): true
status:
  (conditions[?type == 'Programmed']):
    - status: 'True'
      reason: Programmed
  (konnect.controlPlaneID != null): true
  (konnect.id != null): true
